# digital_restaurant

./: main.py  pyproject.toml
backend/: database.py  main.py  models.py  schemas.py
backend/routes/: analytics_routes.py  menu_routes.py  order_routes.py
demo/: menu_extraction.py
ui/: app.py
