[project]
name = "digital-resaurant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "flask>=3.1.2",
    "flask-wtf>=1.2.2",
    "openai>=1.107.2",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pytesseract>=0.3.13",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "uvicorn[standard]>=0.35.0",
]
